profile-photo-change

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Vinay Somawat - Computer Science Portfolio Webpage</title>
+      <title>Arshan Ahmad - Computer Science Portfolio Webpage</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Portfolio webpage of Vinay Somawat" />
+      <meta name="description" content="Portfolio webpage of Arshan Ahmad" />
       <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
-      <meta name="author" content="Vinay Somawat" />
+      <meta name="author" content="Arshan Ahmad" />
       <!--Social Media icons--> 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -41,7 +41,7 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-                  <h1 id="colorlib-logo"><a href="https://vinaysomawat.github.io">Vinay Somawat</a></h1>
+                  <h1 id="colorlib-logo"><a href="https://vinaysomawat.github.io">Arshan Ahmad</a></h1>
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
                   <div id="navbar" class="collapse">
