--- a/webDev.html
+++ b/webDev.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Vinay Somawat - Web Development</title>
+    <title>Arshan Ahmad - Web Development</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Portfolio webpage of Vinay Somawat" />
+    <meta name="description" content="Portfolio webpage of Arshan Ahmad" />
     <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
-    <meta name="author" content="Vinay Somawat" />
+    <meta name="author" content="Arshan Ahmad" />
     <!--quora icon--> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" href="logo.png">
     <link rel="icon" type="image/png" href="kisspng-wechat-avatar-icon-line-v-word-5a715fe8a66dc6.6173848315173795606817.png">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/cFor better reach brother..ss?family=Quicksand:300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
     <!-- Animate.css -->
     <link rel="stylesheet" href="css/animate.css">
@@ -53,18 +53,26 @@
         <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
           <div class="text-center">
             <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-            <h1 id="colorlib-logo"><a href="https://vinaysomawat.github.io">Vinay Somawat</a></h1>
+            <h1 id="colorlib-logo"><a href="https://vinaysomawat.github.io">Arshan Ahmad</a></h1>
               <span><strong><u>Tech Stacks</u></strong></span><br>
-              <span class='badge badge-secondary'>Bootstrap</span>
-              <span class='badge badge-secondary'>JavaScript</span>
-              <span class='badge badge-secondary'>Angular 7</span>
-              <span class='badge badge-secondary'>Spring-boot</span>
-              <span class='badge badge-secondary'>Nodejs</span>
+              <span class='badge badge-secondary'>Gazebo</span>
+              <span class='badge badge-secondary'>HTML</span>
+              <span class='badge badge-secondary'>CSS</span>
+              <span class='badge badge-secondary'>Google Script</span>
+              <span class='badge badge-secondary'>Python</span>
+              <span class='badge badge-secondary'>C++/C</span>
+              <span class='badge badge-secondary'>Apache, Nginx</span>
+              <span class='badge badge-secondary'>Git & Github</span>
+              <span class='badge badge-secondary'>Robot Operating System</span>
+              <span class='badge badge-secondary'>Socket</span>
+              <span class='badge badge-secondary'>Redis</span>
+              <span class='badge badge-secondary'>Celery</span>
+              <span class='badge badge-secondary'>Docker</span>
               <span class='badge badge-secondary'>Django</span>
               <span class='badge badge-secondary'>MySQL</span>
-              <span class='badge badge-secondary'>MongoDB</span>
+              <span class='badge badge-secondary'>Postgresql</span>
               <span class='badge badge-secondary'>AWS</span>
-              <span class='badge badge-secondary'>Heroku</span>
+              <span class='badge badge-secondary'>Docker</span>
           </div>
         </aside>
         <div id="colorlib-main">
@@ -87,36 +95,43 @@
                               <div
                                 onmouseover="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(1) > div > a > div:nth-child(1)').style.backgroundColor='#78C2AD'"
                                 onmouseout="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(1) > div > a > div:nth-child(1)').style.backgroundColor=''">
-                                <a href="https://github.com/vinaysomawat/Travographer-Portal" style="text-decoration:none;">
+                                <a href="http://ec2-13-234-136-218.ap-south-1.compute.amazonaws.com" style="text-decoration:none;">
                                   <div>
-                                    <h4 class="mb-3">Travographer-portal</h4>
+                                    <h4 class="mb-3">Ecommerce Website</h4>
                                   </div>
                                   <div
                                     class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
                                     <div id="divMain">
                                       <div id='left-div' class="resume-content">
                                         <img style='float:left; margin:0 20px;' width='300px;' class='img-fluid'
-                                          src='images/tg-portal.png'>
+                                          src='images/store.png'>
                                       </div>
+                                      </a>
                                       <div id='right-div' class='resume-content'>
                                         <div class="subheading mb-0">
-                                          <p>It is an implementation to Setup Amazon S3 in a Django Project, how to use S3 to handle user uploaded files.</p>
+                                          <p>A Ecommerce website.<br>
+                                            <a href="https://github.com/1arshan/Ecommerce-Website">Source Code</a> <br>
+                                            <a href="http://ec2-13-234-136-218.ap-south-1.compute.amazonaws.com">Hosted Link</a> <br>
+                                            More Detail <br>
+
+                                          </p>
                                         </div>
                                         <div class="mb-0">
                                           <span class='badge badge-secondary'>Django</span>
                                           <span class='badge badge-secondary'>AWS</span>
-                                          <span class='badge badge-secondary'>Bootstrap</span>
-                                          <span class='badge badge-primary'>JavaScript</span>
-                                          <span class='badge badge-secondary'>Heroku</span>
+                                          <span class='badge badge-secondary'>CSS</span>
+                                          <span class='badge badge-primary'>HTML</span>
+                                          <span class='badge badge-secondary'>Redis</span>
+                                          <span class='badge badge-secondary'>Nginx</span>
                                             <br><br>
-                                        <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Travographer-Portal&type=watch&count=true&size=small&v=2" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
-                                        <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Travographer-Portal&type=star&count=true&size=small" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
-                                        <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Travographer-Portal&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
+                                        <iframe src="https://ghbtns.com/github-btn.html?user=1arshan&repo=Ecommerce-Website&type=watch&count=true&size=small&v=2" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
+                                        <iframe src="https://ghbtns.com/github-btn.html?user=1arshan&repo=Ecommerce-Website&type=star&count=true&size=small" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
+                                        <iframe src="https://ghbtns.com/github-btn.html?user=1arshan&repo=Ecommerce-Website&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
                                         </div>
                                       </div>
                                     </div>
                                   </div>
-                                </a>
+
                               </div>
                             </li>
                             <br>
@@ -126,16 +141,16 @@
                               <div
                                 onmouseover="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(1) > div > a > div:nth-child(1)').style.backgroundColor='#78C2AD'"
                                 onmouseout="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(1) > div > a > div:nth-child(1)').style.backgroundColor=''">
-                                <a href="https://programmingdiaries.herokuapp.com/" style="text-decoration:none;">
+                                <a href="http://ec2-13-234-136-218.ap-south-1.compute.amazonaws.com:8080/quora/" style="text-decoration:none;">
                                   <div>
-                                    <h4 class="mb-3">Programming diaries</h4>
+                                    <h4 class="mb-3">Quora Clone</h4>
                                   </div>
                                   <div
                                     class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
                                     <div id="divMain">
                                       <div id='left-div' class="resume-content">
                                         <img style='float:left; margin:0 20px;' width='300px;' class='img-fluid'
-                                          src='images/programmingdiaries.png'>
+                                          src='images/quora-clone.png'>
                                       </div>
                                       <div id='right-div' class='resume-content'>
                                         <div class="subheading mb-0">
@@ -148,7 +163,8 @@
                                           <span class='badge badge-primary'>HTML5</span>
                                           <span class='badge badge-primary'>CSS3</span>
                                           <span class='badge badge-primary'>JavaScript</span>
-                                          <span class='badge badge-secondary'>Heroku</span>
+                                          <span class='badge badge-secondary'>AWS</span>
+                                          <span class='badge badge-secondary'>Nginx:reverse proxy</span>
                                         </div>
                                       </div>
                                     </div>
@@ -164,9 +180,9 @@
                               <div
                                 onmouseover="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(3) > div > a > div:nth-child(1)').style.backgroundColor='#78C2AD'"
                                 onmouseout="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(3) > div > a > div:nth-child(1)').style.backgroundColor=''">
-                                <a href="https://github.com/vinaysomawat/DeveloperAtYourDoor" style="text-decoration:none;">
+                                <a href="https://github.com/1arshan/bLOGER" style="text-decoration:none;">
                                   <div>
-                                    <h4 class="mb-3">DeveloperAtYourDoor</h4>
+                                    <h4 class="mb-3">Blogging Website</h4>
                                   </div>
                                   <div
                                     class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
@@ -190,9 +206,9 @@
                                           <span class='badge badge-primary'>Heroku</span>
                                         </div>
                                         <br>
-                                        <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=DeveloperAtYourDoor&type=watch&count=true&size=small&v=2" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
-                                        <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=DeveloperAtYourDoor&type=star&count=true&size=small" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
-                                        <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=DeveloperAtYourDoor&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
+                                        <iframe src="https://ghbtns.com/github-btn.html?user=1arshan&repo=bLOGER&type=watch&count=true&size=small&v=2" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
+                                        <iframe src="https://ghbtns.com/github-btn.html?user=1arshan&repo=bLOGER&type=star&count=true&size=small" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
+                                        <iframe src="https://ghbtns.com/github-btn.html?user=1arshan&repo=bLOGER&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
                                       </div>
                                     </div>
                                   </div>
@@ -209,7 +225,7 @@
                                 onmouseout="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(5) > div > a > div:nth-child(1)').style.backgroundColor=''">
                                 <a href="https://vinaysomawat.github.io" style="text-decoration:none;">
                                   <div>
-                                    <h4 class="mb-3">Web-Portfolio</h4>
+                                    <h4 class="mb-3">Web-Portfolio #edit it</h4>
                                   </div>
                                   <div
                                     class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
@@ -240,6 +256,45 @@
                               </div>
                             </li>
                             <br>
+                            <li>
+                              <i class="fa-li fa fa-check"></i>
+                              <div
+                                onmouseover="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(5) > div > a > div:nth-child(1)').style.backgroundColor='#78C2AD'"
+                                onmouseout="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(5) > div > a > div:nth-child(1)').style.backgroundColor=''">
+                                <a href="https://vinaysomawat.github.io/Resume-Builder" style="text-decoration:none;">
+                                  <div>
+                                    <h4 class="mb-3">plate_recognizer</h4>
+                                  </div>
+                                  <div
+                                    class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
+                                    <div id="divMain" width="80%;">
+                                      <div id='left-div' class="resume-content">
+                                        <img style='float:left; margin:0 20px;' width='300px;' height='150px;' class='img-fluid'
+                                          src='images/resume-builder.png'>
+                                      </div>
+                                      <div id='right-div' class='resume-content'>
+                                        <div class="subheading mb-0">
+                                          <p>Web based editor to build Resumes in a customizable templates.</p>
+                                        </div>
+                                        <div class="mb-0">
+                                          <span class='badge badge-primary'>Bootstrap</span>
+                                          <span class='badge badge-secondary'>HTML5</span>
+                                          <span class='badge badge-secondary'>CSS3</span>
+                                          <span class='badge badge-secondary'>JavaScript</span>
+                                          <span class='badge badge-secondary'>Jquery</span>
+                                        </div>
+                                        <br>
+                                        <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Resume-Builder&type=watch&count=true&size=small&v=2" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
+                                        <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Resume-Builder&type=star&count=true&size=small" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
+                                        <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Resume-Builder&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </a>
+                              </div>
+                            </li>
+                            <br><br>
+
                             <li>
                               <i class="fa-li fa fa-check"></i>
                               <div
@@ -278,6 +333,7 @@
                               </div>
                             </li>
                             <br><br>
+
                             <li>
                               <i class="fa-li fa fa-check"></i>
                               <div
@@ -285,7 +341,7 @@
                                 onmouseout="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(5) > div > a > div:nth-child(1)').style.backgroundColor=''">
                                 <a href="http://somawatvinay.pythonanywhere.com/" style="text-decoration:none;">
                                   <div>
-                                    <h4 class="mb-3">Django File Handle</h4>
+                                    <h4 class="mb-3">Google Form Clone Api</h4>
                                   </div>
                                   <div
                                     class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
