trying to create a single page resume

--- a/competitiveProgramming.html
+++ b/competitiveProgramming.html
@@ -39,7 +39,7 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-                  <h1 id="colorlib-logo"><a href="https://vinaysomawat.github.io">Vinay Somawat</a></h1>
+                  <h1 id="colorlib-logo"><a href="https://vinaysomawat.github.io">Arshan Ahmad</a></h1>
                   <p><strong>Competitive Programmer</strong></p>
                </div>
             </aside>
@@ -59,8 +59,8 @@
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                            <div class="progress-wrap">
                               <strong>
-                                 <a href="https://www.codechef.com/users/somawatvinay">
-                                    <p style="color:firebrick">Codechef</p>
+                                 <a href="https://leetcode.com/1arshan/">
+                                    <p style="color:firebrick">LeetCode</p>
                                  </a>
                               </strong>
                            </div>
@@ -68,8 +68,8 @@
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
                               <strong>
-                                 <a href="https://stackoverflow.com/users/8461233/vinay-somawat">
-                                    <p style="color:darkorange">StackOverflow</p>
+                                 <a href="https://github.com/1arshan/arshan-portfolio">
+                                    <p style="color:darkorange">Github</p>
                                  </a>
                               </strong>
                            </div>
@@ -78,7 +78,7 @@
                            <div class="progress-wrap">
                               <strong>
                                  <a href="https://auth.geeksforgeeks.org/user/somawatvinay/profile">
-                                    <p style="color:darkgreen">Geekforgeeks</p>
+                                    <p style="color:darkgreen">HackerRank</p>
                                  </a>
                               </strong>
                            </div>
@@ -87,7 +87,7 @@
                            <div class="progress-wrap">
                               <strong>
                                  <a href="https://www.hackerearth.com/@somawatvinay">
-                                    <p style="color:dimgrey">HackerEarth</p>
+                                    <p style="color:dimgrey">GeekForGeeks</p>
                                  </a>
                               </strong>
                            </div>
