--- a/webDev.html
+++ b/webDev.html
@@ -53,25 +53,41 @@
         <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
           <div class="text-center">
             <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-            <h1 id="colorlib-logo"><a href="https://vinaysomawat.github.io">Arshan Ahmad</a></h1>
-              <span><strong><u>Tech Stacks</u></strong></span><br>
-              <span class='badge badge-secondary'>Gazebo</span>
-              <span class='badge badge-secondary'>HTML</span>
-              <span class='badge badge-secondary'>CSS</span>
-              <span class='badge badge-secondary'>Google Script</span>
-              <span class='badge badge-secondary'>Python</span>
-              <span class='badge badge-secondary'>C++/C</span>
-              <span class='badge badge-secondary'>Apache, Nginx</span>
-              <span class='badge badge-secondary'>Git & Github</span>
-              <span class='badge badge-secondary'>Robot Operating System</span>
-              <span class='badge badge-secondary'>Socket</span>
-              <span class='badge badge-secondary'>Redis</span>
-              <span class='badge badge-secondary'>Celery</span>
-              <span class='badge badge-secondary'>Docker</span>
-              <span class='badge badge-secondary'>Django</span>
-              <span class='badge badge-secondary'>MySQL</span>
+            <h1 id="colorlib-logo"><a href="https://github.com/1arshan/arshan-portfolio">Arshan Ahmad</a></h1>
+
+            <span><strong><u>Tech Stacks</u></strong></span><br>
+            <span class='badge badge-secondary'>C++/C</span>
+            <span class='badge badge-secondary'>Python</span>
+            <span class='badge badge-secondary'>Django</span>
+            <span class='badge badge-secondary'>AWS</span>
+            <span class='badge badge-secondary'>DSA</span>
+            <span class='badge badge-secondary'>SQL</span>
+            <span class='badge badge-secondary'>Git & Github</span>
+            <span class='badge badge-secondary'>Redis</span>
+            <span class='badge badge-secondary'>Rest Api</span>
+            <span class='badge badge-secondary'>Celery</span>
+            <span class='badge badge-secondary'>Robot Operating System</span>
+            <span class='badge badge-secondary'>Gazebo</span>
+            <span class='badge badge-secondary'>Socket</span>
+            <span class='badge badge-secondary'>Docker</span>
+            <span class='badge badge-secondary'>Apache & Nginx</span>
+            <span class='badge badge-secondary'>HTML</span>
+            <span class='badge badge-secondary'>CSS</span>
+            <span class='badge badge-secondary'>Google Script</span>
+            <span class='badge badge-secondary'>Latex</span>
+
+
+
+
+
+
+
+
+
+
+
               <span class='badge badge-secondary'>Postgresql</span>
-              <span class='badge badge-secondary'>AWS</span>
+
               <span class='badge badge-secondary'>Docker</span>
           </div>
         </aside>
