completed for now

--- a/competitiveProgramming.html
+++ b/competitiveProgramming.html
@@ -44,7 +44,7 @@
                </div>
             </aside>
             <!----- main page--------->
-            <div id="colorlib-main">
+            <div id="colorlib-link">
                <!------Skills---------------->
                <section class="colorlib-skills" data-section="skills">
                   <div class="colorlib-narrow-content">
@@ -65,127 +65,12 @@
                               </strong>
                            </div>
                         </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://github.com/1arshan/arshan-portfolio">
-                                    <p style="color:darkorange">Github</p>
-                                 </a>
-                              </strong>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://auth.geeksforgeeks.org/user/somawatvinay/profile">
-                                    <p style="color:darkgreen">HackerRank</p>
-                                 </a>
-                              </strong>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://www.hackerearth.com/@somawatvinay">
-                                    <p style="color:dimgrey">GeekForGeeks</p>
-                                 </a>
-                              </strong>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://www.hackerrank.com/somawatvinay">
-                                    <p style="color:forestgreen">HackerRank</p>
-                                 </a>
-                              </strong>
-                           </div>
-                        </div>
+                     </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
                               <strong>
                                  <a href="https://github.com/vinaysomawat">
                                     <p style="color:black">GitHub</p>
-                                 </a>
-                              </strong>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </section>
-               <section class="colorlib-skills" data-section="skills">
-                  <div class="colorlib-narrow-content">
-                     <div class="row">
-                        <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-                           <!--	<span class="heading-meta">My Specialty</span> -->
-                           <h2>Technical Writing Profiles</h2>
-                           <hr>
-                        </div>
-                     </div>
-                     <div class="row">
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://quora.com/profile/Vinay-Somawat">
-                                    <p style="color:darkred">Quora</p>
-                                 </a>
-                              </strong>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://medium.com/@vinaysomawat">
-                                    <p style="color:aquamarine">Medium</p>
-                                 </a>
-                              </strong>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </section>
-                <section class="colorlib-skills" data-section="skills">
-                  <div class="colorlib-narrow-content">
-                     <div class="row">
-                        <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-                           <!--	<span class="heading-meta">My Specialty</span> -->
-                           <h2>Social Profiles</h2>
-                           <hr>
-                        </div>
-                     </div>
-                     <div class="row">
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://www.linkedin.com/in/vinaysomawat/">
-                                    <p style="color:dodgerblue">Linkedin</p>
-                                 </a>
-                              </strong>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://www.instagram.com/somawatvinay/">
-                                    <p style="color:darkorange">Instagram</p>
-                                 </a>
-                              </strong>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://twitter.com/Vinay_Somawat">
-                                    <p style="color:dodgerblue">Twitter</p>
-                                 </a>
-                              </strong>
-                           </div>
-                        </div>
-                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://www.facebook.com/vinay.somawat">
-                                    <p style="color:darkblue">Facebook</p>
                                  </a>
                               </strong>
                            </div>
