--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-                  <h1 id="colorlib-logo"><a href="https://github.com/1arshan/arshan-portfolio">Arshan Ahmad</a></h1>
+                  <h1 id="colorlib-logo"><a href="https://github.com/1arshan/1arshan.github.io">Arshan Ahmad</a></h1>
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
                   <div id="navbar" class="collapse">
@@ -59,7 +59,7 @@
                </nav>
             </aside>
             <!--- Github ribbon ----------->
-            <a href="https://github.com/1arshan/arshan-portfolio" class="github-corner" aria-label="View source on GitHub">
+            <a href="https://github.com/1arshan/1arshan.github.io" class="github-corner" aria-label="View source on GitHub">
                <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
                   <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
                   <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
@@ -181,7 +181,7 @@
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                            <div class="progress-wrap">
                               <strong>
-                                 <a href="https://github.com/vinaysomawat">
+                                 <a href="https://github.com/1arshan">
                                     <p style="color:darkgreen">GitHub</p>
                                  </a>
                               </strong>
