education part changes

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                                           Project which aim at making cloud simulations available for everyone, regardless
                                           of their system hardware.</p>
                                           <details style="align-content: normal">
-                                             <summary ><small>more detail..</small></summary>
+                                             <summary > <p style="color:blue;">more detail &#9662</p></summary>
                                                 <p style="padding-top:2px"><ul>
                                             <li>Created docker-compose.yml file to set up development environment using
                                                 DockerFiles on a single command.</li>
@@ -488,9 +488,9 @@
                                        <h2><a href="#">EDIFI PVT. LTD.</a> <span>Jul 2020 - Sept 2020</span></h2>
                                        <p><strong>Software Developement Engineering Intern</strong><br>Developed App backend
                                            and also handle their cloud.
-                                       <a href="softwareDev.html"><small>more detail..</small></a></p>
+                                       </p>
                                        <details style="align-content: normal">
-                                             <summary ><small>more detail..</small></summary>
+                                             <summary ><p style="color:blue;">more detail &#9662</summary>
                                                 <p style="padding-top:2px"><ul>
                                         <li>Use CELERY to do all time-consuming task such as email and sms sending
                                             asynchronously, which help in reducing response time from 3s to under 0.5s.</li>
