added detail in project

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                                        <h2><a href="https://github.com/1arshan/Eyantra_Virgi-bot">EYANTRA CHALLENGE 2020-2021 </a></h2>
                                        <p>Project Topic: WareHouse Automation
                                        <details>
-                                          <summary>more details</summary>
+                                          <summary><p style="color:blue;">more detail &#9662</p></summary>
                                        <ul>
                                        <li>Made server to receive order publishing on MQTT server and storing unprocessed
                                           order in Heap according to their priority to  have Highest Priority order on top.</li>
@@ -583,7 +583,7 @@
                                         <h2><a href="http://ec2-13-234-136-218.ap-south-1.compute.amazonaws.com/">ECOMMERCE WEBSITE</a></h2>
                                        <p>Project Topic: ECOMMERCE WEBSITE
                                        <details>
-                                          <summary>more details</summary>
+                                          <summary><p style="color:blue;">more detail &#9662</p></summary>
                                        <ul>
                                        <li>Use Redis with Django to implement cache search which help in reducing response time for same query by 80%.</li>
                                        <li>Use Nginx as reverse proxy to have more than one project running on same cloud server.</li>
@@ -616,7 +616,7 @@
                                         <h2><a href="http://ec2-13-234-136-218.ap-south-1.compute.amazonaws.com:8080/quora/">QUORA CLONE</a></h2>
                                        <p>Project Topic: QUORA CLONE
                                        <details>
-                                          <summary>more details</summary>
+                                          <summary><p style="color:blue;">more detail &#9662</p></summary>
                                        <ul>
                                        <li>A website like Quora where we can ask question and can provide answer</li>
                                        <li>Use Nginx as reverse proxy to have more than one project running on same cloud server.</li>
